--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html> 
      <header> 
-         <link href='dark.css'/> 
-         <link href='light.css'/> 
+         <style>
+             .auto-wrap {
+                 white-space: pre-wrap;
+             }
+         </style>
      </header> 
      <body> 
           <div class="auto-wrap">
